<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diffbot_sim</name>
  <version>0.0.0</version>
  <description>Simulation package for a differential drive robot.</description>
  <maintainer email="your_email@example.com">tranthanhbao</maintainer>
  <license>Apache-2.0</license>

  <!-- Đảm bảo có cả hai dòng này -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Các gói cần để chạy (execute) -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>nav_msgs</exec_depend> <!-- Phụ thuộc cho script logger -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <!-- Giữ nguyên build_type là ament_cmake -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
